# zAI

./: .cursorrules  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
src/: main.py
src/agent/: main.py
src/agent/agents/: __init__.py  conversational_agent.py  intro_agent.py  routing_agent.py  wallet_agent.py
src/agent/agents/character/: character.txt
src/agent/core/: __init__.py  base_agent.py  runtime.py
src/agent/core/agent_interface/: interface.py
src/agent/core/decorators/: agent.py  tool.py
src/agent/core/interfaces/: message_stream.py
src/agent/core/memory/: message_manager.py
src/agent/core/providers/: __init__.py  model_provider.py  open_ai.py
src/agent/core/streams/: console_stream.py  websocket_stream.py
src/agent/static/: index.html
src/agent/types/: agent_info.py
src/core/models/: webhook_events.py
src/core/websocket/: __init__.py  connection_manager.py
src/db/: __init__.py  agent_repository.py  connection.py  exceptions.py
src/utils/: privy_auth.py
src/wallet/: __init__.py  exceptions.py  tools.py  wallet.py  wallet_types.py
src/wallet/adapters/: __init__.py  adapter_registry.py  base_adapter.py  base_contract_config.py
src/wallet/adapters/common/: contract_registry.py
src/wallet/adapters/lifi/: __init__.py  lifi_adapter.py  types.py
src/wallet/adapters/uniswap/: __init__.py  contract_registry.py  old.py  uniswap_adapter.py
src/wallet/adapters/uniswap/contract_abis/: permit2.json  pool.json  v3SwapRouter.json
src/wallet/adapters/zns/: __init__.py  contract_registry.py  exceptions.py  zns_adapter.py
(+1 files in other folders)
