[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = "A CLI interface for a general purpose AI agent"
authors = ["Ricky Roller travelingroller@gmail.com"]
readme = "README.md"
packages = [
    {include = "agent", from = "src"},
    {include = "wallet", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^7.5.0"
python-dotenv = "^1.0.1"
halo = "^0.0.31"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agent = "agent.main:main"